--- a/playbooks/worldpress.yml
+++ b/playbooks/worldpress.yml
@@ -2,8 +2,11 @@
 - name: "Installation Wordpress"
   hosts: prod
   become: true
-  vars_files:
-    - ../files/secrets/credentials.yml
+  # vars_files:
+  #   - ../files/secrets/credentials.yml
+  vars:
+    ansible_password: oszdibcn45kpzdczdczjorvbjo
+    ansible_user: centos
   vars:
     system_user: "{{ ansible_user }}"
   pre_tasks:
