--- a/playbooks/worldpress.yml
+++ b/playbooks/worldpress.yml
@@ -5,8 +5,8 @@
   # vars_files:
   #   - ../files/secrets/credentials.yml
   vars:
-    ansible_password: oszdibcn45kpzdczdczjorvbjo
-    ansible_user: centos
+    ansible_password: "oszdibcn45kpzdczdczjorvbjo"
+    ansible_user: "centos"
   vars:
     system_user: "{{ ansible_user }}"
   pre_tasks:
