--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -1,3 +1,5 @@
-ansible_user: "{{ vault_ansible_user }}"
-ansible_password: "{{ vault_ansible_password }}"
+# ansible_user: "{{ vault_ansible_user }}"
+# ansible_password: "{{ vault_ansible_password }}"
+ansible_password: "oszdibcn45kpzdczdczjorvbjo"
+ansible_user: "centos"
 ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
