--- a/playbooks/worldpress.yml
+++ b/playbooks/worldpress.yml
@@ -2,11 +2,8 @@
 - name: "Installation Wordpress"
   hosts: prod
   become: true
-  # vars_files:
-  #   - ../files/secrets/credentials.yml
-  # vars:
-  #   ansible_password: "oszdibcn45kpzdczdczjorvbjo"
-  #   ansible_user: "centos"
+  vars_files:
+    - ../files/secrets/credentials.yml
   vars:
     system_user: "{{ ansible_user }}"
   pre_tasks:
